调整订制城市的逻辑

--- a/JiaoBaoYun-hb/html/cloud/app_notes_create.html
+++ b/JiaoBaoYun-hb/html/cloud/app_notes_create.html
@@ -75,6 +75,7 @@
 						<div></div>
 					</div>
 				</div>
+				<audio id="audio_audio" autoplay="autoplay" preload="auto"></audio>
 			</div>
 		</div>
 		<script src="../../js/mui.min.js"></script>
