--- a/JiaoBaoYun-hb/html/sciedu/sciedu_home.html
+++ b/JiaoBaoYun-hb/html/sciedu/sciedu_home.html
@@ -66,12 +66,16 @@
 			.mui-title {
 				z-index: 3;
 			}
+
+			.mui-icon-list {
+				margin-top: 2px;
+			}
 		</style>
 	</head>
 
 	<body>
 		<header class="mui-bar mui-bar-nav">
-			<a id="changeCity" class="mui-icon mui-icon mui-icon-list mui-pull-left"></a>
+			<a id="changeCity" class="mui-icon mui-icon-list mui-pull-left"></a>
 			<h1 id="title" class="mui-title"></h1>
 			<div id="sciEduSlider" class="mui-slider"></div>
 		</header>
