--- a/JiaoBaoYun-hb/html/cloud/app_notes_create.html
+++ b/JiaoBaoYun-hb/html/cloud/app_notes_create.html
@@ -47,7 +47,7 @@
 	<body>
 		<header class="mui-bar mui-bar-nav">
 			<a class="mui-action-back mui-icon mui-icon-left-nav mui-pull-left"></a>
-			<h1 class="mui-title" style="color: white;">笔记</h1>
+			<h1 class="mui-title">笔记</h1>
 			<div id="finish" class="title-text-pull-right">完成</div>
 		</header>
 		<div class="mui-content mui-fullscreen">
