--- a/JiaoBaoYun-hb/html/cloud/record_student_add.html
+++ b/JiaoBaoYun-hb/html/cloud/record_student_add.html
@@ -48,7 +48,7 @@
 	<body>
 		<header class="mui-bar mui-bar-nav">
 			<a class="mui-action-back mui-icon mui-icon-left-nav mui-pull-left"></a>
-			<h1 id="title" class="mui-title" style="text-align: left;color: white;"></h1>
+			<h1 id="title" class="mui-title" style="text-align: left;"></h1>
 			<div id="commit" class="title-text-pull-right">发布</div>
 		</header>
 		<div class="mui-content">
