--- a/JiaoBaoYun-hb/html/mine/qun_manage_info_change_post.html
+++ b/JiaoBaoYun-hb/html/mine/qun_manage_info_change_post.html
@@ -40,7 +40,7 @@
 	<body>
 		<header class="mui-bar mui-bar-nav">
 			<a class="mui-action-back mui-icon mui-icon-left-nav mui-pull-left"></a>
-			<h1 id="title" class="mui-title" style="color: white;"></h1>
+			<h1 id="title" class="mui-title"></h1>
 			<div id="save" class="title-text-pull-right">保存</div>
 		</header>
 		<div class="mui-content">
