--- a/JiaoBaoYun-hb/html/cloud/app_notes_create.html
+++ b/JiaoBaoYun-hb/html/cloud/app_notes_create.html
@@ -161,7 +161,8 @@
 					canvas: document.getElementById("audio_canvas"),
 					play: document.getElementById("audio_play"),
 					pause: document.getElementById("audio_pause"),
-					time: document.getElementById("audio_time")
+					time: document.getElementById("audio_time"),
+					audio:document.getElementById("audio_audio")
 				});
 				//获取配置信息
 				hideOption = events.initHideKeyBoard();
