多次点击录像 出现多个录像的问题 拍照添加只能上传一个附件 游客身份 点击其他专家中的我关注的人 跳转到登录界面的问题

--- a/JiaoBaoYun-hb/html/qiuzhi/expert-detail.html
+++ b/JiaoBaoYun-hb/html/qiuzhi/expert-detail.html
@@ -190,9 +190,11 @@
 				console.log('他关注的人');
 			})
 			events.addTap('IsFocusedMan', function() {
-				//判断是否是游客身份登录
-				if(events.judgeLoginMode(this)) {
-					return;
+				if(utid == 0 && utid == ExpertsInfo.UserId) {
+					//判断是否是游客身份登录
+					if(events.judgeLoginMode(this)) {
+						return;
+					}
 				}
 				events.singleWebviewInPeriod(this, "AttentionPersons.html", {
 					expertInfo: ExpertsInfo,
