各种界面调整

--- a/JiaoBaoYun-hb/html/index/firstPage.html
+++ b/JiaoBaoYun-hb/html/index/firstPage.html
@@ -78,7 +78,7 @@
 //							events.openNewWindow('index.html');
 //						}, 2000);
 						//判断是否需要更新
-						setTimeout(appUpdate.updateApp, 5000);
+//						setTimeout(appUpdate.updateApp, 5000);
 					} else if(data.value == -1) { //登录失败,用游客登录
 						defalutPerson();
 						events.defaultLogin(function(data) {
