我的界面 布局

--- a/JiaoBaoYun-hb/html/index/mine.html
+++ b/JiaoBaoYun-hb/html/index/mine.html
@@ -28,17 +28,17 @@
 				<ul class="mui-table-view mui-table-view-chevron">
 					<li class="mui-table-view-cell" position='0'>
 						<a class="mui-navigate-right" open-type="common">
-							<img src="../../image/mine/group-manage.png" class="mine-icon"></img> 群管理
+							<p><img src="../../image/mine/group-manage.png" class="mine-icon"></img> 群管理</p>
 						</a>
 					</li>
 					<li class="mui-table-view-cell" position='1'>
 						<a class="mui-navigate-right" open-type="common">
-							<img src="../../image/mine/data.png" class="mine-icon"></span> 人员资料
+							<p><img src="../../image/mine/data.png" class="mine-icon"></span> 人员资料</p>
 						</a>
 					</li>
 					<li class="mui-table-view-cell" position='3'>
 						<a class="" open-type="common">
-							<img src="../../image/mine/new-message.png" class="mine-icon"></span> 新消息
+							<p><img src="../../image/mine/new-message.png" style="margin-right: 5px;" class="mine-icon"></span>新消息</p>
 							<span id="news-amount" class="mui-badge mui-badge-red">0</span>
 						</a>
 					</li>
@@ -51,29 +51,29 @@
 
 					<li class="mui-table-view-cell" position='4'>
 						<a class="mui-navigate-right">
-							<img src="../../image/mine/my-space.png" class="mine-icon"></img> 我的空间
+							<p><img src="../../image/mine/my-space.png" class="mine-icon"></img> 我的空间</p>
 						</a>
 					</li>
 					<li id="check-news" class="mui-table-view-cell" position='8' style="display: none;">
 						<a class="mui-navigate-right">
-							<img src="../../image/mine/news-check.png" class="mine-icon"></img> 新闻审核
+							<p><img src="../../image/mine/news-check.png" class="mine-icon"></img> 新闻审核</p>
 						</a>
 					</li>
 					<li class="mui-table-view-cell" position='5'>
 						<a class="mui-navigate-right">
-							<img src="../../image/mine/my-points.png" class="mine-icon"></img> 积分
+							<p><img src="../../image/mine/my-points.png" class="mine-icon"></img> 积分</p>
 						</a>
 					</li>
 
 					<li class="mui-table-view-divider"></li>
 					<li class="mui-table-view-cell" position='6'>
 						<a class="mui-navigate-right">
-							<img src="../../image/mine/setting.png" class="mine-icon"></img> 设置
+							<p><img src="../../image/mine/setting.png" class="mine-icon"></img> 设置</p>
 						</a>
 					</li>
 					<li class="mui-table-view-cell" position='7'>
 						<a class="mui-navigate-right">
-							<img src="../../image/mine/about.png" class="mine-icon"></img> 关于
+							<p><img src="../../image/mine/about.png" class="mine-icon"></img> 关于</p>
 						</a>
 					</li>
 				</ul>
