--- a/JiaoBaoYun-hb/html/cloud/storage_show_imge.html
+++ b/JiaoBaoYun-hb/html/cloud/storage_show_imge.html
@@ -37,78 +37,61 @@
 			<a class="mui-action-back mui-icon mui-icon-left-nav mui-pull-left"></a>
 			<h1 class="mui-title">图片</h1>
 		</header>
-		<div class="mui-content" id="content"></div>
+		<div class="mui-content" id="content" style="top: 0px;"></div>
 		<script type="text/javascript">
 			mui.init({
 				gestureConfig: {
 					doubletap: true
 				},
 			});
-			var allImgeData = []; //记录所有的图片id和token
 			var header = document.getElementById("header");
 			header.style.visibility = 'hidden';
 			var change = false;
 			var showId = ''; //当前展示的图片id
-			var previewImage = mui.previewImage();
+			var previewImage;
+			var allImages = {}; //记录查看的图片
 			mui.plusReady(function() {
-				var wd = plus.nativeUI.showWaiting(window.storageKeyName.WAITING);
-				document.querySelector(".mui-content").style.top = '0px';
+				var wd = events.showWaiting();
 				var main = plus.webview.currentWebview(); //获取当前窗体对象
-
-				getAllToken(main.data.fpath);
-
-				window.addEventListener('showFile', function(e) {
-					previewImage = mui.previewImage();
-					var wd2 = plus.nativeUI.showWaiting(window.storageKeyName.WAITING);
-					console.log('showFile');
-					var getToken = true;
-					mui.each(allImgeData, function(index, element) {
-						if(element.id == e.detail.data.fpath) {
-							var str = element.token;
-							var deadline = str.match(/\\?e=(\S*)&token=/)[1];
-							var myDate = new Date();
-							var getTime = myDate.getTime().toString();
-							getTime = getTime.substring(0, getTime.length - 2);
-							if(getTime < deadline) { //在过期时间内
-								getToken = false;
-								showImge(element.id, element.token);
-							} else {
-								allImgeData.splice(index, 1);
-							}
-							return false;
-						}
-					});
-					if(getToken) {
-						getAllToken(e.detail.data.fpath);
-					}
-				});
+				previewImage = mui.previewImage();
 
 				mui.back = function() {
-					//document.getElementById("content").innerHTML = '';
-					//console.log('body '+document.body.innerHTML);
 					previewImage.dispose();
-					//					var imge = document.getElementById(showId);
-					//					if(imge) {
-					//						console.log('imge ' + imge.innerHTML);
-					//						imge.parentNode.removeChild(imge);
-					//					}
 					plus.webview.hide(main, 'pop-out');
 				}
 
 				document.addEventListener('tap', function(e) {
-					//console.log(header.style.visibility);
 					change = true;
 					setTimeout(function() {
 						if(change) {
 							headerChange();
 						}
 					}, 250);
-
 				});
 
 				document.addEventListener('doubletap', function(e) {
 					change = false;
 				});
+
+				window.addEventListener('showFile', function(e) {
+					previewImage = mui.previewImage();
+					var wd2 = events.showWaiting();
+					var data = allImages[e.detail.data.fpath];
+					if(data) {
+						var myDate = new Date();
+						var getTime = myDate.getTime().toString();
+						getTime = getTime.substring(0, getTime.length - 2);
+						if(getTime < data.deadline) { //在过期时间内
+							showImge(data.id, data.token);
+						} else {
+							getAllToken(e.detail.data.fpath);
+						}
+					} else {
+						getAllToken(e.detail.data.fpath);
+					}
+				});
+
+				getAllToken(main.data.fpath);
 			});
 
 			/**
@@ -131,16 +114,16 @@
 					appId: 4, //int 必填 项目id
 					urls: [fpath] //array 必填 需要获取下载token文件的路径
 				}
-				var getDownTokenUrl = window.storageKeyName.QNGETDOWNTOKENFILE;
-				CloudFileUtil.getQNDownToken(getDownTokenUrl, getDownToken, function(data) {
-					console.log('七牛下载token:' + data);
-					allImgeData.push({
-						id: fpath, //文件路径
-						token: data.Data[0].Value //文件对应的token
-					});
+				CloudFileUtil.getQNDownToken(window.storageKeyName.QNGETDOWNTOKENFILE, getDownToken, function(data) {
+					console.log('七牛下载token:' + JSON.stringify(data));
+					allImages[fpath] = {};
+					allImages[fpath].id = fpath;
+					allImages[fpath].token = data.Data[0].Value;
+					allImages[fpath].deadline = allImages[fpath].token.match(/\\?e=(\S*)&token=/)[1];
+					//console.log('allImages ' + JSON.stringify(allImages[fpath]));
 					showImge(fpath, data.Data[0].Value);
 				}, function(xhr, type, errorThrown) {
-					plus.nativeUI.closeWaiting();
+					events.closeWaiting();
 					mui.toast('获取文件路径失败：' + type);
 					console.log('获取文件路径失败：' + type);
 				});
@@ -152,17 +135,11 @@
 			 * @param {Object} path 图片的token
 			 */
 			function showImge(id, path) {
+				console.log('showImge ' + path);
 				showId = id;
 				document.getElementById("content").innerHTML = '<img id="' + id + '" data-preview-src="' + path + '" data-preview-group="' + id + '"/>';
 				previewImage.open(document.getElementById(id), id);
-				//setTimeout(function() {
-				//					document.getElementById("content").innerHTML = '<img id="' + id + '" style="position: absolute;width: 100%;visibility: hidden;" src="' + path + '"/>';
-				//document.getElementById(id).onload = function() {
-				//document.getElementById(id).style.visibility = 'visible';
-				//						TouchMove.addTouchListener(document.getElementById(id));
-				plus.nativeUI.closeWaiting();
-				//}
-				//}, 300);
+				events.closeWaiting();
 			}
 		</script>
 	</body>
