--- a/JiaoBaoYun-hb/html/qiuzhi/qiuzhi-questionSub.html
+++ b/JiaoBaoYun-hb/html/qiuzhi/qiuzhi-questionSub.html
@@ -119,14 +119,14 @@
 				/*回答者姓名*/
 				line-height: 40px;
 				font-size: 15px;
-				font-weight: bold;
 				color: #323232;
 			}
 
 			#answer_bottom .mui-table-view-cell .answer-info {
 				/*回答的赞，评论数，时间信息*/
-				margin-top: 5px;
+				margin-top: 13px;
 				color: #b7b7b7;
+				font-size: 13px;
 			}
 
 			#ordertype {
@@ -144,12 +144,9 @@
 				white-space: normal !important;
 				text-overflow: ellipsis;
 				word-wrap: break-word;
-				/*-webkit-line-clamp: inherit;*/
 				-webkit-box-orient: vertical;
 				color: #808080;
 				font-size: 1.5rem;
-				/*line-height: 20px;
-				height: 60px;*/
 			}
 
 			.ellipsis-3 {
@@ -161,7 +158,7 @@
 				word-wrap: break-word;
 				-webkit-line-clamp: 3;
 				-webkit-box-orient: vertical;
-				margin-top: 10px;
+				margin-top: 13px;
 				color: #808080;
 			}
 
