游客身份，求知个人中心bug

--- a/JiaoBaoYun-hb/html/qiuzhi/expert-ask.html
+++ b/JiaoBaoYun-hb/html/qiuzhi/expert-ask.html
@@ -207,15 +207,15 @@
 		mui('.mui-table-view').on('tap', '.mui-table-view-cell', function() {
 			var index = this.id.replace('li', '');
 			var modelTemp = datasource[index];
-			//判断回答或则问题是否还存在,flag=1为提问，=2为回答，id为对应id
-			if(events.askDetailOrAnswerDetail(1, modelTemp.AskId)) {
-				return;
-			}
-			//跳转界面
-			events.openNewWindowWithData('qiuzhi-question.html', {
-				askID: modelTemp.AskId, //问题id
-				channelInfo: modelTemp, //当前话题
-				allChannels: window.myStorage.getItem('allChannels') //全部话题
+			events.askDetailOrAnswerDetail(1, modelTemp.AskId, function(data) {
+				if(data) {
+					//跳转界面
+					events.openNewWindowWithData('qiuzhi-question.html', {
+						askID: modelTemp.AskId, //问题id
+						channelInfo: modelTemp, //当前话题
+						allChannels: window.myStorage.getItem('allChannels') //全部话题
+					});
+				}
 			});
 		});
 		getAsksByUser(ExpertsInfo.UserId);
