--- a/JiaoBaoYun-hb/html/index/index.html
+++ b/JiaoBaoYun-hb/html/index/index.html
@@ -30,19 +30,19 @@
 		<!--底部选项卡（.mui-bar-tab）-->
 		<nav id="nav_tab" class="mui-bar mui-bar-tab">
 			<a id="defaultTab" class="mui-tab-item mui-active" style="display: none;" href="../cloud/cloud_home.html">
-				<span class="mui-icon iconfont icon-yunpan1"></span>
+				<span class="mui-icon iconfont icon-shangchuanyunduan"></span>
 				<span class="mui-tab-label">云盘</span>
 			</a>
 			<a id="tabclass" class="mui-tab-item" href="../sciedu/sciedu_home.html">
-				<span class="mui-icon iconfont icon-jiaoyu"></span>
+				<span class="mui-icon iconfont icon-jiaoyu1"></span>
 				<span class="mui-tab-label">科教</span>
 			</a>
 			<a id="bottom-show" class="mui-tab-item" href="../show/show_home_1.html">
-				<span class="mui-icon iconfont icon-dongtai1"></span>
+				<span class="mui-icon iconfont icon-dongtai"></span>
 				<span class="mui-tab-label">展现</span>
 			</a>
 			<a class="mui-tab-item" href="../qiuzhi/qiuzhi_home.html">
-				<span class="mui-icon iconfont icon-wenda1"></span>
+				<span class="mui-icon iconfont icon-wenda2"></span>
 				<span class="mui-tab-label">求知</span>
 			</a>
 		</nav>
