--- a/JiaoBaoYun-hb/html/mine/setting.html
+++ b/JiaoBaoYun-hb/html/mine/setting.html
@@ -73,36 +73,36 @@
 			//存储个人信息
 			var tempInfo;
 
-						var wxChannel = null; // 微信支付
-						var aliChannel = null; // 支付宝支付
-						var channel = null;
+//						var wxChannel = null; // 微信支付
+//						var aliChannel = null; // 支付宝支付
+//						var channel = null;
 
 			mui.plusReady(function() {
 				tempInfo = window.myStorage.getItem(window.storageKeyName.PERSONALINFO);
 				console.log('tempInfo.uid:' + tempInfo.uid);
 				document.getElementById('change_phoneNum').innerText = tempInfo.uid;
 				// 获取支付通道
-								plus.payment.getChannels(function(channels) {
-									console.log('channels=' + JSON.stringify(channels));
-//									alert("通道=" + JSON.stringify(channels));
-									for(var i in channels) {
-										var temp = channels[i];
-										if(temp.id == 'alipay') {
-											aliChannel = temp;
-										} else if(temp.id == 'wxpay') {
-											wxChannel = temp;
-										}
-									}
-								}, function(e) {
-									alert("获取支付通道失败：" + e.message);
-								});
+//								plus.payment.getChannels(function(channels) {
+//									console.log('channels=' + JSON.stringify(channels));
+////									alert("通道=" + JSON.stringify(channels));
+//									for(var i in channels) {
+//										var temp = channels[i];
+//										if(temp.id == 'alipay') {
+//											aliChannel = temp;
+//										} else if(temp.id == 'wxpay') {
+//											wxChannel = temp;
+//										}
+//									}
+//								}, function(e) {
+//									alert("获取支付通道失败：" + e.message);
+//								});
 				//点击绑定手机cell，弹出
 				mui('.mui-table-view').on('tap', '.mui-table-view-cell', function() {
 					var index = this.id.replace('li', '');
 					console.log('index:' + index);
 					if(index == '0') {
-//												console.log("ali");
-//												pay('alipay');
+//												console.log("wxpay");
+//												pay('wxpay');
 						mui.confirm(tempInfo.uid, '您已绑定手机号', ['取消', '更换'], function(e) {
 							var index = e.index;
 							switch(index) {
@@ -118,7 +118,7 @@
 					}
 				});
 								var ALIPAYSERVER = 'https://jsypay.jiaobaowang.net/jsypay/alipay/sys/aliappserver.ashx';
-								var WXPAYSERVER = 'https://jsypay.jiaobaowang.net/example/AppServer.aspx?body="教宝云-会员"&attach="附件数据"&total_fee=201';
+								var WXPAYSERVER = 'https://jsypay.jiaobaowang.net/JSYPAY/WxPay/sys/AppServer.aspx';
 
 				//2. 发起支付请求
 				function pay(id) {
@@ -140,10 +140,10 @@
 						switch(xhr.readyState) {
 							case 4:
 								if(xhr.status == 200) {
-									var data = htmldecode(xhr.responseText);
-									alert("PAYSERVER=" + PAYSERVER + ',channel=' + JSON.stringify(channel));
-									alert("获取订单信=" + JSON.stringify(xhr));
-									plus.payment.request(channel, data, function(result) {
+//									var data = htmldecode(xhr.responseText);
+//									alert("PAYSERVER=" + PAYSERVER + ',channel=' + JSON.stringify(channel));
+//									alert("获取订单信=" + JSON.stringify(xhr));
+									plus.payment.request(channel, xhr.responseText, function(result) {
 										console.log('result='+JSON.stringify(result));
 										plus.nativeUI.alert("支付成功！", function() {
 
