--- a/JiaoBaoYun-hb/html/qiuzhi/expert-ask.html
+++ b/JiaoBaoYun-hb/html/qiuzhi/expert-ask.html
@@ -317,7 +317,7 @@
 			li.id = 'li' + i;
 			li.className = 'mui-table-view-cell';
 			li.innerHTML = '<div class="mui-table"><div class="mui-table-cell mui-col-xs-12">' +
-				'<h4 class="mui-ellipsis" style="font-size:1.6rem;color: #323232;">' + datasource1[i].AskTitle +
+				'<h4 class="mui-ellipsis" style="font-size:1.6rem;color: #323232; font-weight:normal;">' + datasource1[i].AskTitle +
 				'</h4><p class="mui-h6 mui-ellipsis"  style="font-size:1.3rem;color: #B7B7B7;">' + datasource1[i].AnswerNum + '回答·' + datasource1[i].FocusNum + '关注·' + str_Time + '</p></div></div>'
 			list.appendChild(li);
 		}
